<resources>
    <string name="app_name">Formula Wizard</string>
    <string name="title_activity_main">Formula Wizard</string>
    <string name="variable_a">a</string>
    <string name="variable_b">b</string>
    <string name="variable_c">c</string>
    <string name="quadratic_formula">Quadratic Formula</string>
    <string name="calculate_button">Calculate!</string>
    <string name="empty_board">Empty Chalkboard</string>
    <string name="circle_area">Area of Circle</string>
    <string name="variable_radius">Radius r</string>
    <string name="cone_surface">Surface of Cone</string>
    <string name="variable_slant">Slant s</string>
    <string name="cube_surface">Surface of Cube</string>
    <string name="variable_side">Side s</string>
    <string name="cylinder_surface">Surface of Cylinder</string>
    <string name="variable_height">Height h</string>
    <string name="variable_radius1">Radius 1</string>
    <string name="variable_radius2">Radius 2</string>
    <string name="ellipse_area">Area of Ellipse</string>
    <string name="rectangle_area">Area of Rectangle</string>
    <string name="variable_width">Width w</string>
    <string name="square_area">Area of Square</string>
    <string name="variable_square">Side s</string>
    <string name="variable_base1">Base 1</string>
    <string name="variable_base2">Base 2</string>
    <string name="trapezoid_area">Area of Trapezoid</string>
    <string name="variable_base">Base b</string>
    <string name="triangle_area">Area of Triangle</string>
    <string name="distance_points">Distance between Points</string>
    <string name="cone_volume">Volume of Cone</string>
    <string name="cube_volume">Volume of Cube</string>
    <string name="cylinder_volume">Volume of Cylinder</string>
    <string name="ellipsoid_volume">Volume of Ellipsoid</string>
    <string name="variable_radius3">Radius 3</string>
    <string name="prism_volume">Volume of Prism</string>
    <string name="variable_length">Length l</string>
    <string name="pyramid_volume">Volume of Pyramid</string>
    <string name="variable_basearea">Area of Base B</string>
    <string name="circle_perimeter">Perimeter of Circle</string>
    <string name="ellipse_perimeter">Perimeter of Ellipse</string>
    <string name="sphere_volume">Volume of Sphere</string>
    <string name="rectangle_perimeter">Perimeter of Rectangle</string>
    <string name="square_perimeter">Perimeter of Square</string>
    <string name="trapezoid_perimeter">Perimeter of Trapezoid</string>
    <string name="variable_base3">Base 3</string>
    <string name="variable_base4">Base 4</string>
    <string name="triangle_perimeter">Perimeter of Triangle</string>
    <string name="variable_side1">Side 1</string>
    <string name="variable_side2">Side 2</string>
    <string name="exponent2">Exponent of 2</string>
    <string name="exponent3">Exponent of 3</string>
    <string name="pythagorean_theorem">Pythagorean Theorem</string>
    <string name="slope_line">Slope of a line</string>
    <string name="midpoint_points">Midpoint between Points</string>
    <string name="input_prompt">Press Calculate to get the answer!</string>
    <string name="input_not_complete">You have not defined all variables :(</string>
    <string name="voice_prompt">Ask the wizard a question!</string>   
    <string name="analyze">Analyzing your input &#8230;</string>
    <string name="query_error">An error occurred while processing your query :(</string>
    <string name="query_notunderstood">Your query was not understood :(</string>
    <string name="result">Result</string>
    <string name="no_result">No result found.</string>
    <string name="more_info">More at&#160;</string>
    <string name="wolfram_icon">Wolfram Alpha Icon</string>
    <string name="connection_error">You are not connected to the internet. Please check your connection.</string>
    <string name="add_formula">Add Formula</string>
    <string name="cancel_formula">Cancel Formula</string>
    <string name="save_formula">Save Formula</string>
    <string name="editformula_name_hint">E.g. Celsius to Fahrenheit</string>
    <string name="editformula_formula_hint">E.g. Celsius * (9/5) + 32</string>
    <string name="saved_successfully">Formula saved successfully!</string>
    <string name="your_custom_formula">Your custom formula</string> 
    <string name="name">Name:</string> 
    <string name="formula">Formula:</string>
    <string name="category">Category:</string>  
    <string name="no_custom_formulas">No custom formulas in here.\nGo ahead and add some!</string>
    <string name="alert_notsaved_title">Exit without saving?</string>
    <string name="alert_notsaved_subtitle">All changes will be lost</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="input_not_complete2">Your input seems to be incomplete :(</string>
    <string name="select_category">Select a category</string>
    <string name="spinner_icon">Spinner icon</string>
    <string name="alert_deleteformula_title">Delete this formula</string>
    <string name="alert_deleteformula_subtitle">Do you really want to delete this formula?</string>
    <string name="delete">Delete</string>
    <string name="share_formula">Share Formula</string>
    <string name="edit_formula">Edit Formula</string>
    <string name="about_voice">About Voice Calc</string>
    <string name="enter_value">Enter a numeric value</string>
    <string name="unknown_function">One of your functions is unknown.\nCheck your formula!</string>
    <string name="unparsable_error">The formula is unparsable.\nPlease, check it again!</string>
    <string name="unknown_error">An unknown error occurred.\nCheck your formula!</string>
    <string name="area">Area</string>
    <string name="perimeter">Perimeter</string>
    <string name="surface">Surface</string>
    <string name="volume">Volume</string>
    <string name="distance">Distance</string>
    <string name="midpoint">Midpoint</string>
    <string name="slope">Slope</string>
    <string name="account_blocked">Your query cannot be processed right now.</string>
    <string name="find_out_why">Click here, to find out why!</string>
    <string name="limit_of_queries">Limit of queries in the Wolfram API</string>
    <string name="go_back">Go back</string>
    <string name="visit_wolfram">Visit Wolfram Alpha</string>
    <string name="api_problem">The Wolfram API limits the number of queries per application to 2000 per month.
        This means that the users of ”Formula Wizard” altogether just have 2000 queries per month! Unfortunately, 
        right now, those queries are used up. \n\nSince ”Formula Wizard” is a non-profit, open source project that aims
        at education, it would be great if Wolfram Alpha increased (or better removed) the limit of queries per month. 
       	\n\nUntil then, please vist Wolfram Alpha\'s webpage directly.</string>
    
    <string name="using_functions">Using functions</string>
    <string name="formulas">Functions</string>
    <string name="info_message">When creating a custom formula you can use all kinds of functions! \nHere is a list of what
        you can use: \n\nabs, acos, asin, atan, cbrt, ceil, cos, cosh,
		exp, floor, log, sin, sinh, sqrt, tan, tanh\n\nJust make sure to use parentheses with all functions. Otherwise you might
		confuse the Formula Wizard :)\n\nAnd one last word of advice: The functions (like sin) operate on radians! Not on degrees!</string>
	<string name="ok">OK!</string>
    <string name="no_real_roots">There are no real roots!</string>
    <string name="radius_not_negative">The radius can\'t be negative!</string>
    <string name="baseheight_not_negative">The base/ height can\'t be negative!</string>
    <string name="baseareaheight_not_negative">The base area / height can\'t be negative!</string>
    <string name="side_not_negative">The side can\'t be negative!</string>
    <string name="base_not_negative">The base can\'t be negative!</string>
    <string name="basesides_not_negative">The base/ sides can\'t be negative!</string>
    <string name="widthheight_not_negative">The width/ height can\'t be negative!</string>
    <string name="radiusslant_not_negative">The radius/ slant can\'t be negative!</string>
    <string name="lengthwidthheight_not_negative">The length/ width/ height can\'t be negative!</string>
    <string name="radiusheight_not_negative">The radius/ height can\'t be negative!</string>
    <string name="enter_positive_value">Enter a positive value!</string>
    <string name="nan_error">Your input doesn\'t make sense to the wizard. Please, check it again or hit the \'Info Button\' at the top
        to learn more.</string>
    
</resources>