<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" 
    android:focusable="true"
	android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/formula_name_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/your_custom_formula"
        android:textColor="#000000"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp" >
    	
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
            android:src="@drawable/emptyboard"
            android:contentDescription="@string/empty_board"/>
        
        <TextView
            android:id="@+id/formula_on_chalkboard"
            android:layout_width="260dp"
            android:layout_height="140dp"
            android:gravity="center"
            android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:textSize="20sp"
			android:textColor="@android:color/white"/>
        
	</RelativeLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/formula_name_edit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editformula_name_hint"
            android:inputType="text" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:text="@string/formula"
            android:textColor="#000000"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/formula_edit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="50"
            android:singleLine="true"
            android:hint="@string/editformula_formula_hint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate" />

    </LinearLayout>
    
</LinearLayout>
</ScrollView>