<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#101010">
        
    <ImageView 
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/formulawizard_icon"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/app_name"/>
    
    <TextView
        android:id="@+id/delete_title"
        android:text="@string/alert_deleteformula_title"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/app_name" />
    
    </LinearLayout>
    
    <TextView
        android:id="@+id/delete_message"
        android:text="@string/alert_deleteformula_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" 
        android:textSize="15sp"
        android:gravity="center"/>

</LinearLayout>