<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#101010">
        
    <ImageView 
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/formulawizard_icon"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/app_name"/>
    
    <TextView
        android:id="@+id/info_title"
        android:text="@string/using_functions"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/app_name" />
    
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
	        android:id="@+id/info_message"
	        android:text="@string/info_message"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:layout_gravity="fill"
	        android:textSize="15sp"/>
        
    </ScrollView>
</LinearLayout>