<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" 
    android:focusable="true"
	android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/pythagorean_theorem"
        android:textColor="#000000"
        android:textSize="25sp" />
	   
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >
    	
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
            android:src="@drawable/emptyboard"
            android:contentDescription="@string/empty_board"/>
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
            android:src="@drawable/pythagoras_formula"
            android:contentDescription="@string/pythagorean_theorem" />
        
	</RelativeLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:text="@string/variable_a"
            android:textColor="#000000"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/variable_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="number|numberSigned|numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"    
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:layout_marginTop="10dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:text="@string/variable_b"
            android:textColor="#000000"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/variable_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="number|numberSigned|numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/calculate_button"
        android:textSize="20sp" 
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/display_x1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textSize="20sp" 
            android:textIsSelectable="true"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>