<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">
    
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:orientation="vertical">
    
<LinearLayout 
	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp">
        
	<ImageView
	    android:id="@+id/voice_button"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/voice_prompt"
        android:background="@drawable/formulawizard_button"
        android:src="@drawable/voice_selector" />
        
    <TextView
        android:id="@+id/voice_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"/>
    
    <LinearLayout 
        android:id="@+id/result_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center_horizontal">

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:visibility="gone"/>
        
        <TextView 
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout    
        android:id="@+id/more_info"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="30dp"
		android:visibility="gone">
    
	    <TextView 
	        android:id="@+id/more_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:freezesText="true"
			android:textSize="20sp"
			android:textStyle="italic"
			android:layout_marginBottom="5dp"
			android:text="@string/more_info"/>
	    
	    <ImageView 
	        android:id="@+id/wolfram_icon"
	        android:layout_width="wrap_content"
			android:layout_height="30dp"
			android:src="@drawable/wolfram"
			android:adjustViewBounds="true"
			android:contentDescription="@string/wolfram_icon"/>
	</LinearLayout>
    
    
</LinearLayout>
</ScrollView>
</RelativeLayout>